fix: customize the gaps between course elements

--- a/src/pages/CoursesOneCategoryPage/CoursesOneCategoryPage.module.css
+++ b/src/pages/CoursesOneCategoryPage/CoursesOneCategoryPage.module.css
@@ -8,10 +8,7 @@
   height: inherit;
   display: flex;
   flex-direction: row;
-  flex-basis: 40%;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
   gap: 10px;
   padding: 20px;
 }
